* Changelog

** [[https://github.com/hzhangxyz/TAT/compare/v0.2.22...dev][Unreleased]]

*** Added
*** Changed
*** Deprecated
*** Removed
*** Fixed

** [[https://github.com/hzhangxyz/TAT/compare/v0.2.20...v0.2.22][v0.2.22]] - 2022-09-02

*** Added
+ *tetragono*: Add =save_configuration_file= option for =gm_run= and =ap_run= in tetragono shell, which saves sampling
  configurations during gradient descent.
+ *tetragono*: Add list as interface for =rename_io= in =tetragono.common_tensor.tensor_toolkit=. Original argument such
  as ={0: a, 1: b, 2: c}= can be written as =[a, b, c]=.
*** Deprecated
+ *tetragono*: =save_state_interval= option for =gm_run= and =ap_run= is deprecated. The state will be saved for every
  step if =save_state_file= was set in the future.
*** Removed
+ *tetragono*: The original function name =create= to create lattice is removed, which was deprecated in v0.2.18. The
  new function name to create lattice is =abstract_lattice=.
+ *tetragono*: =_owner= of Configuration for sampling lattice and ansatz product state is removed, use =owner= instead.
*** Fixed
+ *TAT.hpp*: Fix an internal compiler error for some old compiler, caused by the feature: fusing edges during tracing.

** [[https://github.com/hzhangxyz/TAT/compare/v0.2.19...v0.2.20][v0.2.20]] - 2022-08-02

*** Added
+ *tetraku*: Add models data and ansatzes data into an individual package named =tetraku=.
+ *tetragono*: Configuration use =owner= to get the owner sampling lattice object of this configuration object, instead
  of the previous =_owner=.
+ *TAT.hpp*: Add fusing edges support when =trace= a tensor, to keep the consistency with function =contract=.
+ *TAT.py*: Add fusing edges argument binding for function =trace= of the tensor.
*** Changed
+ *tetragono*: Rename multiple product state to ansatz product state, to avoid the ambiguous abbreivation. Rename all
  =mp_xxx= to =ap_xxx= in tetragono shell.