@@ -41,3 +41,4 @@ auto
 *.data
 *.dat
 *.run
+*.log
