@@ -146,7 +146,6 @@ def gradient_descent(
         fix_gauge=False,
         # About log and save state
         log_file=None,
-        save_state_interval=None,
         save_state_file=None,
         save_configuration_file=None,
         # About line search
@@ -158,13 +157,6 @@ def gradient_descent(
         check_difference_delta=1e-8,
         # About Measurement
         measurement=None):
-
-    if save_state_interval is not None:
-        showln(" ##### DEPRECATE WARNING BEGIN #####")
-        showln(" save_state_interval is deprecated, state will be saved for every step in future")
-        showln(" ###### DEPRECATE WARNING END ######")
-    else:
-        save_state_interval = 1
 
     time_str = datetime.now().strftime("%Y-%m-%d-%H:%M:%S")
 
@@ -331,7 +323,7 @@ def gradient_descent(
                 # sampling is not needed to refresh since every gradient step will use a new sampling object.
 
                 # Save state
-                if save_state_interval and (grad_step + 1) % save_state_interval == 0 and save_state_file:
+                if save_state_file:
                     write_to_file(state, save_state_file.replace("%s", str(grad_step)).replace("%t", time_str))
                 if save_configuration_file:
                     write_to_file(sampling_configurations, save_configuration_file)
