@@ -6,6 +6,8 @@
 *** Changed
 *** Deprecated
 *** Removed
++ *tetragono*: =save_state_interval= option for =gm_run= and =ap_run= is removed. The state will be saved for every
+  step.
 *** Fixed
 
 ** [[https://github.com/hzhangxyz/TAT/compare/v0.2.20...v0.2.22][v0.2.22]] - 2022-09-02
@@ -17,7 +19,7 @@
   as ={0: a, 1: b, 2: c}= can be written as =[a, b, c]=.
 *** Deprecated
 + *tetragono*: =save_state_interval= option for =gm_run= and =ap_run= is deprecated. The state will be saved for every
-  step if =save_state_file= was set in the future.
+  step if =save_state_file= was not set in the future.
 *** Removed
 + *tetragono*: The original function name =create= to create lattice is removed, which was deprecated in v0.2.18. The
   new function name to create lattice is =abstract_lattice=.
